# ros-unity-scanner

./: .gitignore  README.md  run.sh  run_without_unity.sh
docs/: index.html  index.md
my_pkg/: CMakeLists.txt  package.xml
my_pkg/include/: Config.h
my_pkg/include/eki_interface/: CMakeLists.txt  LOG.txt  eki_interface.cpp  eki_interface.h
my_pkg/include/kukavarproxy/: CMakeLists.txt  kukavarproxy.cpp  kukavarproxy.h
my_pkg/include/manipulator/: CMakeLists.txt  manipulator.cpp
my_pkg/include/mitsubishi/: CMakeLists.txt  mitsubishi.cpp  mitsubishi.h
my_pkg/src/: kuka_node.cpp  kuka_srv_node.cpp  mitsubishi_node.cpp  srvtest.cpp  tcp_node.cpp  test_node.cpp  vrep_scan_man.cpp  vrep_work_man.cpp
my_pkg/srv/: TrajectoryService.srv
ros_robotics_interface/: CMakeLists.txt  package.xml
ros_robotics_interface/include/: Config.h
ros_robotics_interface/include/eki_interface/: eki_interface.cpp  eki_interface.h
ros_robotics_interface/include/kukavarproxy/: kukavarproxy.cpp  kukavarproxy.h
ros_robotics_interface/include/manipulator/: manipulator.h
ros_robotics_interface/include/mitsubishi/: mitsubishi.cpp  mitsubishi.h
ros_robotics_interface/msg/: Arturmsg.msg
ros_robotics_interface/src/: kuka_node.cpp  kuka_srv_node.cpp  mitsubishi_node.cpp  srvtest.cpp  test_node.cpp  vrep_scan_man.cpp  vrep_work_man.cpp
ros_scanner_interface/: CMakeLists.txt  package.xml
ros_scanner_interface/action/: Align.action
ros_scanner_interface/include/: tests.cpp
ros_scanner_interface/include/CPolyModel/: CMakeLists.txt  CPolyModel.h
ros_scanner_interface/include/CScanner/: CMakeLists.txt  CScanner.cpp  CScanner.h
ros_scanner_interface/include/CTrajectory/: CMakeLists.txt  CTrajectory.cpp  CTrajectory.h
ros_scanner_interface/include/actions_align/: CMakeLists.txt  action_align.cpp  action_align.h
ros_scanner_interface/include/actions_proc/: CMakeLists.txt  action_proc.cpp  action_proc.h
ros_scanner_interface/include/actions_scan/: CMakeLists.txt  action_scan.cpp  action_scan.h
ros_scanner_interface/include/actions_status/: CMakeLists.txt  action_status.h
ros_scanner_interface/launch/: scanning_system_core.launch
ros_scanner_interface/msg/: AlignActionResult.msg  ProcessingGoal.msg  ScanningResult.msg  StatusActionGoal.msg  StatusResult.msg
ros_scanner_interface/src/: add_two_ints_client.cpp  scanning_node.cpp
ros_scanner_interface/srv/: StartService.srv  StatusService.srv
scanning_system_core/: CMakeLists.txt  package.xml
scanning_system_core/action/: Processing.action  Scanning.action  Status.action
scanning_system_core/include/: deformcontrollib.cpp  tests.cpp
scanning_system_core/include/CPolyModel/: CMakeLists.txt  CPolyModel.cpp  CPolyModel.h
scanning_system_core/include/CScanner/: CMakeLists.txt  CScanner.cpp  CScanner.h
scanning_system_core/include/CTrajectory/: CMakeLists.txt  CTrajectory.cpp  CTrajectory.h
scanning_system_core/include/actions_align/: CMakeLists.txt  action_align.h
scanning_system_core/include/actions_proc/: CMakeLists.txt  action_proc.h
scanning_system_core/include/actions_scan/: CMakeLists.txt  action_scan.cpp  action_scan.h
scanning_system_core/include/actions_status/: CMakeLists.txt  action_status.h
scanning_system_core/launch/: scanning_system_core.launch
scanning_system_core/msg/: AlignAction.msg  AlignActionFeedback.msg  AlignActionGoal.msg  AlignGoal.msg  AlignResult.msg  Mesh.msg  PoseRobotMsg.msg  ProcessingAction.msg  ProcessingActionFeedback.msg  ProcessingActionGoal.msg  ProcessingActionResult.msg  ProcessingGoal.msg  ProcessingResult.msg  ScanningFeedback.msg  ScanningGoal.msg  StartMsg.msg  StartScanMsg.msg  Status.msg  StatusAction.msg  StatusActionFeedback.msg  StatusActionResult.msg  StatusGoal.msg  TrajectoryMsg.msg
scanning_system_core/src/: add_two_ints_client.cpp  scanning_node.cpp
scanning_system_core/srv/: AddTwoInts.srv  PolygonModel.srv  ScanPositionService.srv  TrajectoryService.srv
unity_hmi/: .gitignore  packages.config
unity_hmi/Assets/: Transform.preset
unity_hmi/Assets/Editor/: DoDishesActionClientEditor.cs  UnitySendTrajectoryServiceClientEditor.cs
unity_hmi/Assets/Materials/: BlankDeselect.mat  BlankSelect.mat  New Material 2.mat  New Material 3.mat  New Material 4.mat  New Material 5.mat  New Material 6.mat  New Material.mat
unity_hmi/Assets/Model DataBase/: 0.prefab  New Material.mat  PlaneDBG.prefab  TestMaterial.mat  archiScan.mtl  gribogSCentrom.dae
unity_hmi/Assets/Model DataBase/cube/: Cube (1).prefab
unity_hmi/Assets/Plugins/: maxCamera.cs  rbdl.lib
unity_hmi/Assets/Plugins/OBJImport/: OBJLoader.cs
unity_hmi/Assets/Plugins/booleanMesh/: booleanScene (2).unity  booleanScene.unity  booleanSceneSettings.lighting
unity_hmi/Assets/Prefabs/: Expandable Scrollview.prefab  Light Container 1.prefab  Light Container.prefab
unity_hmi/Assets/Presets/: HorizontalLayoutGroup.preset  JointMove1.preset  LineRenderer.preset  UnityTrajectoryServiceClient.preset
unity_hmi/Assets/RosSharpMessages/: RosConnector.prefab
unity_hmi/Assets/Scenes/: BlankDesignScene.unity  Demon.unity  MainScene (2).unity  MainScene.unity  ModelScene.unity  Test.unity  fabrik.unity
unity_hmi/Assets/Scripts/Arch/: DemonOLPApplication.cs  DemonOLPController.cs  DemonOLPModel.cs  DemonOLPView.cs
unity_hmi/Assets/Scripts/AreaSelected/: ScanArea.cs  ScanAreaSelect.cs
unity_hmi/Assets/Scripts/Blank/: BlankController.cs  BlankControllerInEditorMod.cs  BlankModel.cs  BlankPose.cs
unity_hmi/Assets/Scripts/Command/: CommandModel.cs  CommandPose.cs
unity_hmi/Assets/Scripts/DllImport/: TestImport.cs
unity_hmi/Logs/: ApiUpdaterCheck.txt
unity_hmi/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt  TagManager.asset
unity_hmi/Temp/: Assembly-CSharp-Editor.dll.hash  Assembly-CSharp.dll.hash  CompilationLog.txt  UnityTempFile-1fe44136d6a8e171782c1378715863a9  UnityTempFile-769bbeb841b03ad0faab3b0a9081d820  workerlic
unity_hmi/Temp/__Backupscenes/: 0.backup
unity_hmi/UserSettings/: EditorUserSettings.asset
(+341 files in other folders)
